--- a/project0/templates/index.html
+++ b/project0/templates/index.html
@@ -1,3 +1,5 @@
+{% extends 'base.html' %}
+{% block content %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,6 +8,20 @@
     <title>Home</title>
 </head>
 <body>
-    <h1>Hello world!!</h1>
+    <h1>Using Django Template Language</h1>
+
+    <form action="add", method = "post">
+        {% csrf_token %}
+
+        Enter 1st Number : <input type="text" name="num1"><br>
+        Enter 2nd Number : <input type="text" name="num2"><br>
+        <input type="submit">
+
+
+    </form>
+
+
 </body>
 </html>
+
+{% endblock %}
