--- a/project0/templates/home.html
+++ b/project0/templates/home.html
@@ -319,36 +319,36 @@
 						<!-- Destination -->
 						<div class="destination item">
 							<div class="destination_image">
-								<img src="{% static 'images/destination_4.jpg' %}" alt="">
+								<img src="{{baseUrl}}/{{dest1.img}}" alt="">
 							</div>
 							<div class="destination_content">
-								<div class="destination_title"><a href="destinations.html">Paris</a></div>
-								<div class="destination_subtitle"><p>Nulla pretium tincidunt felis, nec.</p></div>
-								<div class="destination_price">From $679</div>
+								<div class="destination_title"><a href="destinations.html">{{dest1.name}}</a></div>
+								<div class="destination_subtitle"><p>{{dest1.desc}}</p></div>
+								<div class="destination_price">${{dest1.price}}</div>
 							</div>
 						</div>
 
 						<!-- Destination -->
 						<div class="destination item">
 							<div class="destination_image">
-								<img src="{% static 'images/destination_5.jpg' %}" alt="">
+								<img src="{{baseUrl}}/{{dest2.img}}}" alt="">
 							</div>
 							<div class="destination_content">
-								<div class="destination_title"><a href="destinations.html">Phi Phi Island</a></div>
-								<div class="destination_subtitle"><p>Nulla pretium tincidunt felis, nec.</p></div>
-								<div class="destination_price">From $679</div>
+								<div class="destination_title"><a href="destinations.html">{{dest2.name}}</a></div>
+								<div class="destination_subtitle"><p>{{dest2.desc}}</p></div>
+								<div class="destination_price">${{dest2.price}}</div>
 							</div>
 						</div>
 
 						<!-- Destination -->
 						<div class="destination item">
 							<div class="destination_image">
-								<img src="{% static 'images/destination_6.jpg' %}" alt="">
+								<img src="{{baseUrl}}/{{dest3.img}}" alt="">
 							</div>
 							<div class="destination_content">
-								<div class="destination_title"><a href="destinations.html">Mykonos</a></div>
-								<div class="destination_subtitle"><p>Nulla pretium tincidunt felis, nec.</p></div>
-								<div class="destination_price">From $679</div>
+								<div class="destination_title"><a href="destinations.html">{{dest3.name}}</a></div>
+								<div class="destination_subtitle"><p>{{dest3.desc}}</p></div>
+								<div class="destination_price">${{dest3.price}}</div>
 							</div>
 						</div>
 
