--- a/project0/templates/home.html
+++ b/project0/templates/home.html
@@ -280,77 +280,24 @@
 					<div class="col">
 						<div class="destinations_container item_grid">
                             		<!-- Destination -->
+                        {% for dest in dests %}
+                        
 						<div class="destination item">
 							<div class="destination_image">
-								<img src="{% static 'images/destination_1.jpg' %}" alt="">
-								<div class="spec_offer text-center"><a href="#">Special Offer</a></div>
+								<img src="{{baseUrl}}/{{dest.img}}" alt="">
+                                {%if dest.offer%}
+                                <div class = "spec_offer text-center"><a href="#">Special Offer</a> </div>
+                                {% endif %}
 							</div>
 							<div class="destination_content">
-								<div class="destination_title"><a href="{% static 'destinations.html'}">Bali</a></div>
-								<div class="destination_subtitle"><p>Nulla pretium tincidunt felis, nec.</p></div>
-								<div class="destination_price">From $679</div>
+								<div class="destination_title"><a href="destinations.html">{{dest.name}}</a></div>
+								<div class="destination_subtitle"><p>{{dest.desc}}</p></div>
+								<div class="destination_price">${{dest.price}}</div>
 							</div>
 						</div>
+                        {% endfor %}
 
-						<!-- Destination -->
-						<div class="destination item">
-							<div class="destination_image">
-								<img src="{% static 'images/destination_2.jpg' %}" alt="">
-							</div>
-							<div class="destination_content">
-								<div class="destination_title"><a href="{% static 'destinations.html'}">Indonesia</a></div>
-								<div class="destination_subtitle"><p>Nulla pretium tincidunt felis, nec.</p></div>
-								<div class="destination_price">From $679</div>
-							</div>
-						</div>
 
-						<!-- Destination -->
-						<div class="destination item">
-							<div class="destination_image">
-								<img src="{% static 'images/destination_3.jpg' %}" alt="">
-							</div>
-							<div class="destination_content">
-								<div class="destination_title"><a href="destinations.html">San Francisco</a></div>
-								<div class="destination_subtitle"><p>Nulla pretium tincidunt felis, nec.</p></div>
-								<div class="destination_price">From $679</div>
-							</div>
-						</div>
-
-						<!-- Destination -->
-						<div class="destination item">
-							<div class="destination_image">
-								<img src="{{baseUrl}}/{{dest1.img}}" alt="">
-							</div>
-							<div class="destination_content">
-								<div class="destination_title"><a href="destinations.html">{{dest1.name}}</a></div>
-								<div class="destination_subtitle"><p>{{dest1.desc}}</p></div>
-								<div class="destination_price">${{dest1.price}}</div>
-							</div>
-						</div>
-
-						<!-- Destination -->
-						<div class="destination item">
-							<div class="destination_image">
-								<img src="{{baseUrl}}/{{dest2.img}}}" alt="">
-							</div>
-							<div class="destination_content">
-								<div class="destination_title"><a href="destinations.html">{{dest2.name}}</a></div>
-								<div class="destination_subtitle"><p>{{dest2.desc}}</p></div>
-								<div class="destination_price">${{dest2.price}}</div>
-							</div>
-						</div>
-
-						<!-- Destination -->
-						<div class="destination item">
-							<div class="destination_image">
-								<img src="{{baseUrl}}/{{dest3.img}}" alt="">
-							</div>
-							<div class="destination_content">
-								<div class="destination_title"><a href="destinations.html">{{dest3.name}}</a></div>
-								<div class="destination_subtitle"><p>{{dest3.desc}}</p></div>
-								<div class="destination_price">${{dest3.price}}</div>
-							</div>
-						</div>
 
 							
 						</div>
