--- a/project0/templates/home.html
+++ b/project0/templates/home.html
@@ -34,10 +34,15 @@
 								<nav class="main_nav">
 									<ul class="d-flex flex-row align-items-start justify-content-start">
 										<li class="active"><a href="index.html">Home</a></li>
-										<li><a href="about.html">About us</a></li>
-										<li><a href="#">Services</a></li>
-										<li><a href="news.html">News</a></li>
 										<li><a href="contact.html">Contact</a></li>
+
+										{% if user.is_authenticated %}
+										<li>Hello, {{user.first_name}}</li>
+										<li><a href="accounts/logout">Logout</a></li>
+										{% else %}	
+										<li><a href="accounts/register">Register</a></li>
+										<li><a href="accounts/login">Login</a></li>
+										{% endif %}
 									</ul>
 								</nav>
 								<div class="header_phone ml-auto">Call us: 00-56 445 678 33</div>
@@ -279,27 +284,29 @@
 				<div class="row destinations_row">
 					<div class="col">
 						<div class="destinations_container item_grid">
-                            		<!-- Destination -->
-                        {% for dest in dests %}
-                        
-						<div class="destination item">
-							<div class="destination_image">
-								<img src="{{dest.img.url}}" alt="">
-                                {%if dest.offer%}
-                                <div class = "spec_offer text-center"><a href="#">Special Offer</a> </div>
-                                {% endif %}
+
+							{% for dest in dests %}
+							<!-- Destination -->
+							<div class="destination item">
+								<div class="destination_image">
+									<img src="{{dest.img.url}}" alt="">
+
+									{% if dest.offer %}
+									<div class="spec_offer text-center"><a href="#">Special Offer</a></div>
+									{% endif %}
+								</div>
+								<div class="destination_content">
+									<div class="destination_title"><a href="destinations.html">{{dest.name}}</a>
+									</div>
+									<div class="destination_subtitle">
+										<p>{{dest.desc}}</p>
+									</div>
+									<div class="destination_price">From ${{dest.price}}</div>
+								</div>
 							</div>
-							<div class="destination_content">
-								<div class="destination_title"><a href="destinations.html">{{dest.name}}</a></div>
-								<div class="destination_subtitle"><p>{{dest.desc}}</p></div>
-								<div class="destination_price">${{dest.price}}</div>
-							</div>
-						</div>
-                        {% endfor %}
 
+							{% endfor %}
 
-
-							
 						</div>
 					</div>
 				</div>
